src/test/ui/fail-no-dead-code-core.stderr
error: function is never used: `foo`
  --> $DIR/fail-no-dead-code-core.rs:7:1
   |
LL | fn foo() {
   | ^^^^^^^^
   |
note: lint level defined here
  --> $DIR/fail-no-dead-code-core.rs:1:9
   |
LL | #![deny(dead_code)]
   |         ^^^^^^^^^

error: aborting due to previous error

